--- a/02-Sources.Rmd
+++ b/02-Sources.Rmd
@@ -1,13 +1,9 @@
 # Sources
 
-The tidymodels webpage managed by RStudio.
+The Shiny webpage managed by RStudio.
 
-https://www.tidymodels.org/
+https://shiny.rstudio.com/
 
-The tidymodels book
+The Mastering Shiny book
 
-https://www.tmwr.org/
-
-This is a good little book on data science and tidymodels. It is pretty up to date. The only issue I have is that they use Jupyter notebooks. I might want to look into trying that, though.
-
-https://ubc-dsci.github.io/introduction-to-datascience/
+https://mastering-shiny.org/
